--- a/firefox/chrome/findbar.css
+++ b/firefox/chrome/findbar.css
@@ -15,7 +15,9 @@ findbar {
   position: relative;
   border-top: none !important;
   padding: 0 !important;
-  transition: transform 82ms linear, opacity 82ms linear 32ms !important;
+  transition:
+    transform 82ms linear,
+    opacity 82ms linear 32ms !important;
   background: none !important;
   pointer-events: none;
   z-index: 1;
@@ -36,10 +38,8 @@ findbar > .close-icon {
   border: 1px solid var(--chrome-content-separator-color);
   border-width: 0 0 1px 0px;
   background-color: var(--lwt-accent-color) !important;
-  background-image: linear-gradient(
-      var(--toolbar-bgcolor),
-      var(--toolbar-bgcolor)
-    ),
+  background-image:
+    linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)),
     var(--lwt-header-image, none);
   pointer-events: auto;
 }
